feat: Implement robust job repetition with cron and interval scheduling, including handling missed runs and preventing drift.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "cron-parser": "^4.9.0",
     "mongodb": "^7.0.0"
   },
   "devDependencies": {
