--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,27 @@
+# Dependencies
 node_modules
-dist
+.pnp
+.pnp.js
+
+# Testing
 coverage
-.env
+
+# Production
+dist
+build
+*.tgz
+
+# Misc
 .DS_Store
+.env
+.npm
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor
 .vscode
+.idea
+*.swp
+*.swo
